[tool.poetry]
name = "is-it-green-yet"
version = "0.1.0"
description = ""
authors = [
  "Adam Gardner <adam.gardner@armakuni.com>",
  "Billie Thompson <billie.thompson@armakuni.com>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.275"
mypy = "^1.4.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
strict=true

[[tool.mypy.overrides]]
module = [
  "msal.*",
]
ignore_missing_imports = true

[tool.ruff]
select = ["R", "A", "B", "S", "F"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]