[tool.poetry]
name = "carbon_guard"
version = "0.7.2"
description = ""
authors = [
  "Adam Gardner <adam.gardner@armakuni.com>",
  "Billie Thompson <billie.thompson@armakuni.com>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
httpx = {extras = ["brotli", "http2"], version = ">=0.24.1,<0.26.0"}
pydantic = {extras = ["dotenv"], version = "^2.0"}
dateparser = "^1.1.8"
types-dateparser = "^1.1.4.9"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = ">=0.0.277,<0.1.1"
mypy = "^1.4.0"
pytest = "^7.3.2"
wiremock = "^2.5.0"
pytest-asyncio = "^0.21.0"
pytest-freezegun = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
strict=true

[[tool.mypy.overrides]]
module = [
  "wiremock.*",
]
ignore_missing_imports = true

[tool.ruff]
select = ["R", "A", "B", "S", "F"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.poetry.scripts]
carbon_guard = "src.main:run"