[project]
name = "carbon_guard"
version = "0.7.4"
description = ""
authors = [
    {name = "Adam Gardner", email = "adam.gardner@armakuni.com"},
    {name = "Billie Thompson", email = "billie.thompson@armakuni.com"},
]
readme = "README.md"
dependencies = [
    "dateparser>=1.2.0",
    "httpx[brotli,http2]>=0.27.2",
    "pydantic>=2.9.2",
    "typer>=0.12.5",
]
requires-python = ">=3.11"

[[tool.mypy.overrides]]
module = [
  "wiremock.*",
]
ignore_missing_imports = true

[tool.ruff]
lint.select = ["R", "A", "B", "S", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "types-dateparser>=1.2.0.20240420",
    "wiremock>=2.6.1",
    "mypy>=1.11.2",
    "time-machine>=2.16.0",
]

[project.scripts]
carbon_guard = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
